# TestAction

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  main.cc
.github/workflows/: hosted-pure-workflow.yml  manual.yml  manual_mpi.yml  simple.yml  test_docker.yml
_build/: Build.cmake  CacheMain.cmake
_build/arcane/: vcpkg.json
v2/: CMakeLists.txt
vcpkg_manifest/: CMakeLists.txt  CacheMain.txt  main.cpp  vcpkg.json
