cmake_minimum_required(VERSION 3.11)

project(example C CXX)

message(STATUS "VCPKG: ${VCPKG_PREFIX_TRIPLET}")
list(APPEND CMAKE_PREFIX_PATH "${VCPKG_PREFIX_TRIPLET}")
message(STATUS "Searching for MPI library")
set(MPI_HOME "${VCPKG_PREFIX_TRIPLET}")
message(STATUS "Setting MPI_HOME to '${MPI_HOME}'")
set(MPI_CXX_SKIP_MPICXX TRUE)
set(MPI_ASSUME_NO_BUILTIN_MPI TRUE)
find_package(MPI REQUIRED COMPONENTS C CXX)
set(MPI_C_INCLUDE_DIRS "${VCPKG_PREFIX_TRIPLET}/include")
message(STATUS: "MPI_C_INCLUDE_DIR   '${MPI_C_INCLUDE_DIRS}'")
message(STATUS: "MPI_CXX_INCLUDE_DIR '${MPI_CXX_INCLUDE_DIRS}'")
message(STATUS: "MPI_C_LIBRARIES     '${MPI_C_LIBRARIES}'")
message(STATUS: "MPI_CXX_LIBRARIES   '${MPI_CXX_LIBRARIES}'")
add_executable(example main.cc)
enable_testing()
target_include_directories(example PRIVATE ${MPI_C_INCLUDE_DIRS})
target_link_libraries(example PRIVATE ${MPI_C_LIBRARIES})
add_test(NAME t1 COMMAND ${MPIEXEC_EXECUTABLE} -n 4 ${CMAKE_CURRENT_BINARY_DIR}/example)
